# YCJniHelper

./: README.md  build.gradle  gradle.properties  settings.gradle
AppJniLib/: build.gradle
AppStartLib/: README.md  build.gradle
AutoCloserLib/: build.gradle
CallJniLib/: build.gradle
CardViewLib/: build.gradle
CrashDumper/: build.gradle
CrashDumper/src/main/: AndroidManifest.xml
CrashDumper/src/main/cpp/: CMakeLists.txt  crash_dumper.cpp  readelf.cpp  stack_tracer.cpp
EpicJniLib/: build.gradle
ImageJniLib/: build.gradle
ImageJniLib/src/main/: AndroidManifest.xml
MmkvLib/: .gitignore  build.gradle
MmkvLib/src/main/cpp/: CMakeLists.txt
Mmkvdemo/: build.gradle
MonitorLib/: build.gradle
MonitorLib/src/main/: AndroidManifest.xml
MoonerJniLib/: build.gradle
MoonerJniLib/src/main/: AndroidManifest.xml
MoonerJniLib/src/main/cpp/: CMakeLists.txt  jni_init.c  jni_init.h  mooner_exception.c  mooner_exception.h  msponge.c  msponge.h  prevent_pthread_crash.c
MoonerJniLib/src/main/res/values/: strings.xml
SafetyJniLib/src/main/cpp/: safetyjnilib.cpp
ShadowConfig/: build.gradle
ShadowConfig/src/main/: AndroidManifest.xml
SignalHooker/: .gitignore  README.md  build.gradle
TestJniLib/: build.gradle
TestJniLib/src/main/cpp/: CMakeLists.txt  testjnilib.cpp  testjnilib.h
VideoJniLib/src/main/: AndroidManifest.xml
YCCardViewLib/: build.gradle
YCCardViewLib/src/main/: AndroidManifest.xml
ZJniWiki/: 01.JNIEnv深入介绍说明.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
(+96 files in other folders)
